--- a/index.html
+++ b/index.html
@@ -15,6 +15,44 @@
 
 <body>
     <!-- start here bootstap and jquery -->
+    <section class="container-fluid .bg-success-subtle">
+        <header class="p-5 mb-4 text-center header bg-success bg-opacity-75">
+            <h1>Project Tracker</h1>
+            <h2>
+                Current Time &amp; Date: <br />
+                <span id="time-display"></span>
+            </h2>
+        </header>
+    </section>
+    <main class="container-fluid">
+        <div class="row">
+            <div class="col-md col-xl-4">
+                <!-- Add project form and instructions -->
+                <div class="card text-center ">
+                    <div class="card-header ">
+                        Fill Out A Task Form
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">What Needs To Be Added To The Board</h5>
+
+                        <div class="mb-3 text-start">
+                            <label for="taskTitle" class="form-label">Title of Task:</label>
+                            <input type="text" class="form-control" id="taskTitle" aria-describedby="taskTitleHelp">
+                        </div>
+                    </div>
+                    <div class="mb-3 text-start">
+                        <label for="taskDescription" class="form-label">Description of Task:</label>
+                        <textarea class="form-control" id="taskDescription" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Task</button>
+                </div>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
+            </div>
+
+        </div>
+        </div>
 
 
 
@@ -23,14 +61,14 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+        <script src="./assets/js/script.js"></script>
 
 </body>
 
