--- a/index.html
+++ b/index.html
@@ -24,51 +24,56 @@
             </h2>
         </header>
     </section>
-    <main class="container-fluid">
-        <div class="row">
-            <div class="col-md col-xl-4">
-                <!-- Add project form and instructions -->
-                <div class="card text-center ">
-                    <div class="card-header ">
-                        Fill Out A Task Form
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">What Needs To Be Added To The Board</h5>
 
-                        <div class="mb-3 text-start">
-                            <label for="taskTitle" class="form-label">Title of Task:</label>
-                            <input type="text" class="form-control" id="taskTitle" aria-describedby="taskTitleHelp">
+    <div class="container">
+        <div class="row">
+            <!-- swim lanes -->
+            <div class="col-12 col-xl-9">
+
+
+                <section class="row swim-lanes text-center">
+                    <div class="col-12 col-lg-4 d-flex mb-3">
+                        <div id="to-do" class="card border-danger lane flex-grow-1">
+                            <div class="card-header bg-success">
+                                <h2 class="card-title mb-1">To Do</h2>
+                            </div>
+                            <div class="card-body bg-light">
+                                <div id="todo-cards"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="mb-3 text-start">
-                        <label for="taskDescription" class="form-label">Description of Task:</label>
-                        <textarea class="form-control" id="taskDescription" rows="3"></textarea>
+
+                    <div class="col-12 col-lg-4 d-flex mb-3">
+                        <div id="in-progress" class="card border-danger lane flex-grow-1">
+                            <div class="card-header bg-success">
+                                <h2 class="card-title mb-1">In Progress</h2>
+                            </div>
+                            <div class="card-body bg-light">
+                                <div id="in-progress-cards"></div>
+                            </div>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Add Task</button>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
-                </div>
-            </div>
+                    <div class="col-12 col-lg-4 d-flex mb-3">
+                        <div id="done" class="card border-danger lane flex-grow-1">
+                            <div class="card-header bg-success">
+                                <h2 class="card-title mb-1">Done</h2>
+                            </div>
+                            <div class="card-body bg-light">
+                                <div id="done-cards">
 
-        </div>
-        </div>
-
-
-
-
-
-
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js"></script>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                    crossorigin="anonymous"></script>
+                <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+                    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+                <script src="./assets/js/script.js"></script>
 
 </body>
 
